# SImpleReader

./: .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  vite.config.js
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: bookmark.rs  config.rs  epub_reader.rs  error.rs  formatter.rs  image_cache.rs  image_reader.rs  lib.rs  search.rs  tab_manager.rs  text_buffer.rs  zip_fast.rs
src-tauri/src/commands/: bookmark.rs  config.rs  edit.rs  epub.rs  file.rs  format.rs  image.rs  mod.rs  pdf.rs  search.rs  shell_menu.rs
src/components/: BookmarkPanel.js  Editor.js  EpubViewer.js  FormatDialog.js  GoToLineDialog.js  ImageViewer.js  MenuBar.js  PdfViewer.js  SearchDialog.js  SettingsDialog.js  TabBar.js
