[package]
name = "simple-reader"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"

# 직렬화
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# 대용량 텍스트 처리
ropey = "1"

# 에러 처리
anyhow = "1"
thiserror = "1"

# 경로 관리
dirs = "5"

# 타임스탬프
chrono = { version = "0.4", features = ["serde"] }

# Windows 레지스트리
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

# 고유 ID
uuid = { version = "1", features = ["v4"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
